# pygola

./: .env.example  .gitignore  README.md  dev.sh  example.py  policy.example.yaml  prompt.txt  pyproject.toml
pygola/: __init__.py  cli.py  factories.py  layer.py
pygola/audit/: repository.py
pygola/config/: loader.py  schema.py
pygola/conversation/: __init__.py  session.py
pygola/pipeline/: context.py  pipeline.py  stage.py
pygola/providers/: __init__.py  base.py  errors.py  local.py  registry.py  retry.py
pygola/server/: __init__.py  app.py
pygola/stages/: deterministic_pii.py  downstream_llm.py  human_confirm.py  llm_analysis.py  pseudonymization.py
server/: api_server.py  requirements.txt
sh/: start_backend.sh
tests/: test_provider_secrets.py
